Add logs + auto-indent
